Prevent horizontal scrolling (esp. on mobile)

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,9 +1,15 @@
+html,
+body {
+  overflow-x: hidden;
+}
+
 body {
   align-items: center;
   display: flex;
   flex-direction: column;
   gap: 4em;
   padding: 1em 0;
+  position: relative;
 }
 
 main {
